<resources>
    <string name="app_name">Face.It</string>
    <string name="next">Next</string>
    <string name="finish">finish</string>
    <string name="register_face">Register Face</string>
    <string name="attendance_tracking_system">attendance tracking system</string>
    <string name="take_attendance">take attendance</string>
    <string name="register_new_face">register new face</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_matriculation_number">Enter your matriculation number</string>
    <string name="app_logo">app logo</string>
    <string name="scan_face">SCAN FACE</string>
    <string name="welcome_teacher">Welcome, Teacher</string>
    <string name="tap_start_attendance_session_to_begin_taking_attendance_for_your_current_class">Tap \'Start Attendance Session\' to begin taking attendance for your current class.</string>
    <string name="logout">Logout</string>
    <string name="_2_30_pm">2:30 PM</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="position_your_face_in_the_camera_and_tap_capture">👤 Position your face in the camera and tap \'Capture\'</string>


</resources>