<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"

    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:paddingHorizontal="10dp">
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:orientation="vertical">
       <ImageView
       android:layout_width="159dp"
       android:layout_height="159dp"
       android:src="@drawable/logo"/>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/app_name"
           android:textAlignment="center"
           style="@style/logo"/>
   </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Page_Header"
        android:textAlignment="center"
        android:text="@string/attendance_tracking_system"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="50dp">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/register_face_button"
            android:text="@string/register_face"
            style="@style/button_text"
            android:backgroundTint="@color/primary_color"
            android:layout_marginBottom="10dp"
            app:cornerRadius="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/take_attendance_button"
            style="@style/button_text"
            android:backgroundTint="@color/primary_color"
            android:text="@string/take_attendance"
            android:layout_marginTop="10dp"
            app:cornerRadius="12dp"
            />

    </LinearLayout>
</LinearLayout>

</RelativeLayout>