<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterStudent1"
    android:background="@color/white" android:paddingHorizontal="20dp"> <TextView
    android:id="@+id/header_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/register_new_face"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="64dp" style="@style/Page_Header"/>

    <LinearLayout
        android:id="@+id/content_layout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/header_title"
        android:layout_marginTop="48dp" >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxStrokeColor="@color/text_input_outline_color"
            app:hintTextColor="@color/text_input_hint_color"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:inputType="textPersonName" /> </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_matriculation_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxStrokeColor="@color/text_input_outline_color"
            app:hintTextColor="@color/text_input_hint_color"
            android:layout_marginTop="24dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/matric_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:inputType="number" /> </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="48dp" app:cornerRadius="12dp"
            android:backgroundTint="@color/primary_color"
            android:text="@string/next"
            style="@style/button_text"/>

    </LinearLayout>
</RelativeLayout>